RESOLVED FIXED120503
Fix build break after r154861
https://bugs.webkit.org/show_bug.cgi?id=120503
Summary Fix build break after r154861
Ryuan Choi
Reported 2013-08-29 18:44:48 PDT
Other build scripts except xcode include wrong file. Patch will be added for them.
Attachments
test for ews (5.98 KB, patch)
2013-08-29 18:53 PDT, Ryuan Choi
ggaren: review+
Ryuan Choi
Comment 1 2013-08-29 18:53:39 PDT
Created attachment 210056 [details] test for ews
Geoffrey Garen
Comment 2 2013-08-29 18:57:13 PDT
Comment on attachment 210056 [details] test for ews r=me
Ryuan Choi
Comment 3 2013-08-29 19:02:57 PDT
Comment on attachment 210056 [details] test for ews I will update ChangeLog. If contains "Unreviewed" and Reviewed", my mistake.
Ryuan Choi
Comment 4 2013-08-29 19:07:44 PDT
Note You need to log in before you can comment on or make changes to this bug.