Source/JavaScriptCore/Target.pri
@@ -324,8 +324,6 @@ SOURCES += \
     runtime/JSGlobalObjectFunctions.cpp \
     runtime/JSLock.cpp \
     runtime/JSMap.cpp \
-    runtime/JSMapConstructor.cpp \
-    runtime/JSPrototype.cpp \
     runtime/JSNameScope.cpp \
     runtime/JSNameScope.cpp \
     runtime/JSNotAnObject.cpp \
@@ -353,7 +351,9 @@ SOURCES += \
     runtime/JSWrapperObject.cpp \
     runtime/LiteralParser.cpp \
     runtime/Lookup.cpp \
+    runtime/MapConstructor.cpp \
     runtime/MapData.cpp \
+    runtime/Prototype.cpp \
     runtime/MathObject.cpp \
     runtime/MemoryStatistics.cpp \
     runtime/NameConstructor.cpp \
